added collisions array 2:28

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Pokelike</title>
+  <link rel="shortcut icon" href="/src/assets/Images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
   <canvas>
 
   </canvas>
+  <script src="/src/assets/data/colisions.js"></script>
   <script src="./app.js"></script>
 </body>
 
